--- a/index.html
+++ b/index.html
@@ -321,6 +321,50 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<!-- Chatbot FAB -->
+<button id="chatbotFab" 
+    class="fixed bottom-6 right-6 bg-gradient-to-r from-purple-600 to-indigo-600 text-white md:p-4 p-3 rounded-full shadow-lg 
+           hover:from-purple-500 hover:to-indigo-500 transition-colors duration-300 z-50">
+    <svg xmlns="http://www.w3.org/2000/svg" class="md:h-8 h-5 md:w-8 w-5" viewBox="0 0 24 24" fill="currentColor">
+        <path d="M20 2H4c-1.103 0-2 .897-2 2v18l4-4h14c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"/>
+    </svg>
+</button>
+
+<!-- Chatbot Container -->
+<div id="chatbotContainer" 
+    class="hidden fixed bottom-20 right-6 sm:right-6 w-[75%] sm:w-96 h-[70vh] 
+           bg-white/10 backdrop-blur-lg border border-white/20 rounded-2xl shadow-2xl 
+           flex flex-col overflow-hidden z-50 left-1/2 sm:left-auto -translate-x-1/2 sm:translate-x-0">
+
+    <!-- Header -->
+    <div class="flex justify-between items-center p-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+        <h3 class="text-lg font-semibold">Gravity Assistant</h3>
+        <button id="closeChatbot" class="text-white hover:text-gray-200 focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+        </button>
+    </div>
+
+    <!-- Messages -->
+    <div id="chatMessages" class="flex-1 p-4 space-y-3 overflow-y-auto text-sm bg-black/20 text-gray-100">
+        <div class="bg-purple-600/70 px-3 py-2 rounded-lg max-w-[80%]">👋 Hi! I’m Gravity Assistant. How can I help you today?</div>
+    </div>
+
+    <!-- Input -->
+    <div class="flex items-center border-t border-gray-600/40 p-2 bg-black/40">
+        <input type="text" id="chatInput" placeholder="Type your message..." 
+            class="flex-1 px-3 py-2 text-sm rounded-lg bg-white/20 text-white placeholder-gray-300 
+                   border border-gray-500 focus:outline-none focus:ring-2 focus:ring-purple-500" />
+        <button id="sendChat" 
+            class="ml-2 bg-gradient-to-r from-purple-500 to-indigo-500 text-white p-2 rounded-full hover:opacity-90 transition">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+            </svg>
+        </button>
+    </div>
+</div>
+
 </section>
 
 <script>
@@ -1414,6 +1458,7 @@ document.addEventListener("DOMContentLoaded", () => {
     </p>
   </div>
 </div>
+<script src="chatbot.js"></script>
 
 
     <script>
@@ -1526,6 +1571,6 @@ document.addEventListener("DOMContentLoaded", () => {
       renderTestimonials();
       showSlide(currentSlide);
     </script>
-
+  
   </body>
 </html>
