--- a/index.html
+++ b/index.html
@@ -978,6 +978,30 @@ document.addEventListener("DOMContentLoaded", () => {
         <div class="flex-shrink-0 absolute">
           <div class="panel-content gradient-bg-3 rounded-none shadow-none">
             <div class="description">
+              <h2 class="text-4xl font-bold text-white">Health Care Management Website</h2>
+              <p class="mt-6 text-white leading-relaxed text-lg">
+                A complete solution to streamline patient care, hospital operations, and medical services.
+              </p>
+              <ul class="mt-6 text-white text-lg list-disc list-inside pl-4">
+                <li class="mb-2">Efficient patient record management</li>
+                <li class="mb-2">Online appointment booking and scheduling</li>
+                <li>Secure access to medical reports and history</li>
+              </ul>
+              <button 
+              onclick="window.open('https://care.sync.gravity.et/', '_blank')" 
+              class="mt-8 bg-white text-blue-400 py-3 px-10 rounded-xl font-medium hover:shadow-lg transition">
+                View Product
+              </button>
+            </div>
+            <div class="image-spot">
+              <img src="Hc.png" alt="">
+            </div>
+          </div>
+        </div>
+
+          <div class="flex-shrink-0 absolute">
+          <div class="panel-content gradient-bg-4 rounded-none shadow-none">
+            <div class="description">
               <h2 class="text-4xl font-bold text-white">Attendance Management System Website</h2>
               <p class="mt-6 text-white leading-relaxed text-lg">
                 Simplify tracking and managing attendance for students and staff.
@@ -988,8 +1012,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <li>Easy integration with school systems</li>
               </ul>
               <button 
-              onclick="window.open('https://care.sync.gravity.et/', '_blank')" 
-              class="mt-8 bg-white text-blue-400 py-3 px-10 rounded-xl font-medium hover:shadow-lg transition">
+              class="mt-8 bg-white text-[#020c29] py-3 px-10 rounded-xl font-medium hover:shadow-lg transition">
                 View Product
               </button>
             </div>
@@ -1000,7 +1023,7 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
 
         <div class="flex-shrink-0 absolute">
-          <div class="panel-content gradient-bg-4 rounded-none shadow-none">
+          <div class="panel-content gradient-bg-5 rounded-none shadow-none">
             <div class="description">>
                 <h2 class="text-4xl font-bold text-white">Appointment Scheduling Website</h2>
                 <p class="mt-6 text-white leading-relaxed text-lg">
@@ -1012,9 +1035,8 @@ document.addEventListener("DOMContentLoaded", () => {
                   <li class="mb-2">Staff and client management</li>
                   <li>Real-time availability tracking</li>
                 </ul>
-              <button 
-              onclick="window.open('https://eastsideagroindustry.com/', '_blank')" 
-             class="mt-8 bg-white text-[#2d4380] py-3 px-10 rounded-xl font-medium hover:shadow-lg transition">
+              <button  
+                class="mt-8 bg-white text-[#2d4380] py-3 px-10 rounded-xl font-medium hover:shadow-lg transition">
                 View Product
               </button>
             </div>
@@ -1037,6 +1059,9 @@ document.addEventListener("DOMContentLoaded", () => {
       background: rgb(58 129 245);
     }
     .gradient-bg-4 {
+      background: #020c29;
+    }
+    .gradient-bg-5 {
       background: #2d4380;
     }
     ::-webkit-scrollbar {
